Remove left and right navbar spacing and make background fixed

--- a/css/creative.css
+++ b/css/creative.css
@@ -82,8 +82,6 @@ img::selection {
 .more-spaced {
   padding-top: 15px;
   padding-bottom: 15px;
-  padding-right: 50px;
-  padding-left: 50px;
   transition: all 0.3s !important;
 }
 
@@ -186,6 +184,7 @@ header.masthead {
   background-image: url("../img/header.jpg");
   background-repeat: no-repeat;
   background-position: center center;
+  background-attachment: fixed;
   background-size: cover;
 }
 
